# finalProjectCS122a

./: top.lpf
pico/: CMakeLists.txt  FreeRTOSConfig.h  helpers.h  pico.c  tasks.c
src/: top.sv
